--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,21 +4,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/hicmap: 3D genome contacts calling from HiC data">
-  <title>nf-core/hicmap Pipeline Report</title>
+  <meta name="description" content="dhslab/hicmap: 3D genome contacts calling from HiC data">
+  <title>dhslab/hicmap Pipeline Report</title>
 </head>
 <body>
 <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto;">
 
 <img src="cid:nfcorepipelinelogo">
 
-<h1>nf-core/hicmap v${version}</h1>
+<h1>dhslab/hicmap v${version}</h1>
 <h2>Run Name: $runName</h2>
 
 <% if (!success){
     out << """
     <div style="color: #a94442; background-color: #f2dede; border-color: #ebccd1; padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px;">
-        <h4 style="margin-top:0; color: inherit;">nf-core/hicmap execution completed unsuccessfully!</h4>
+        <h4 style="margin-top:0; color: inherit;">dhslab/hicmap execution completed unsuccessfully!</h4>
         <p>The exit status of the task that caused the workflow execution to fail was: <code>$exitStatus</code>.</p>
         <p>The full error message was:</p>
         <pre style="white-space: pre-wrap; overflow: visible; margin-bottom: 0;">${errorReport}</pre>
@@ -27,7 +27,7 @@
 } else {
     out << """
     <div style="color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6; padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px;">
-        nf-core/hicmap execution completed successfully!
+        dhslab/hicmap execution completed successfully!
     </div>
     """
 }
@@ -44,8 +44,8 @@
     </tbody>
 </table>
 
-<p>nf-core/hicmap</p>
-<p><a href="https://github.com/nf-core/hicmap">https://github.com/nf-core/hicmap</a></p>
+<p>dhslab/hicmap</p>
+<p><a href="https://github.com/dhslab/hicmap">https://github.com/dhslab/hicmap</a></p>
 
 </div>
 
